// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: full module output > renders a model with reserved-word field names 1`] = `
"// AUTO-GENERATED by prisma-effect-schema-generator -- do not edit.
// Regenerate via \`prisma generate\`.

import { Schema } from "effect"

export const TrickySchema = Schema.Struct({
  "default": Schema.String,
  "class": Schema.Number,
  name: Schema.String,
})

export type ModelName =
  | "Tricky"

export const ALL_MODEL_NAMES = ["Tricky"] as const
"
`;

exports[`snapshot: full module output > renders a realistic multi-model module 1`] = `
"// AUTO-GENERATED by prisma-effect-schema-generator -- do not edit.
// Regenerate via \`prisma generate\`.

import { Schema } from "effect"

export const PostSchema = Schema.Struct({
  id: Schema.String,
  title: Schema.String,
  body: Schema.NullOr(Schema.String),
  authorId: Schema.String,
  publishedAt: Schema.NullOr(Schema.DateFromSelf),
  metadata: Schema.NullOr(Schema.Unknown),
  views: Schema.NullOr(Schema.BigIntFromSelf),
  isDraft: Schema.Boolean,
})

export const UserSchema = Schema.Struct({
  id: Schema.String,
  email: Schema.String,
  displayName: Schema.NullOr(Schema.String),
  age: Schema.NullOr(Schema.Number),
  tags: Schema.Array(Schema.String),
  role: Schema.Union(Schema.Literal("ADMIN"), Schema.Literal("USER"), Schema.Literal("GUEST")),
})

export type ModelName =
  | "Post"
  | "User"

export const ALL_MODEL_NAMES = ["Post","User"] as const
"
`;

exports[`snapshot: full module output > renders a single tiny model 1`] = `
"// AUTO-GENERATED by prisma-effect-schema-generator -- do not edit.
// Regenerate via \`prisma generate\`.

import { Schema } from "effect"

export const TodoSchema = Schema.Struct({
  id: Schema.String,
  text: Schema.String,
  done: Schema.Boolean,
  deletedAt: Schema.NullOr(Schema.DateFromSelf),
})

export type ModelName =
  | "Todo"

export const ALL_MODEL_NAMES = ["Todo"] as const
"
`;

exports[`snapshot: full module output > renders an empty datamodel 1`] = `
"// AUTO-GENERATED by prisma-effect-schema-generator -- do not edit.
// Regenerate via \`prisma generate\`.

// No models in your schema.prisma -- nothing to generate.
export const ALL_MODEL_NAMES = [] as const
export type ModelName = never
"
`;

exports[`snapshot: full module output > renders with custom effectImport and aliased binding 1`] = `
"// AUTO-GENERATED by prisma-effect-schema-generator -- do not edit.
// Regenerate via \`prisma generate\`.

import { Schema as S } from "@livestore/utils/effect"

export const XSchema = S.Struct({
  id: S.String,
  color: S.Union(S.Literal("RED"), S.Literal("BLUE")),
})

export type ModelName =
  | "X"

export const ALL_MODEL_NAMES = ["X"] as const
"
`;

exports[`snapshot: full module output > renders with standardSchemaV1 and relationColumns enabled 1`] = `
"// AUTO-GENERATED by prisma-effect-schema-generator -- do not edit.
// Regenerate via \`prisma generate\`.

import { Schema } from "effect"

export const PostSchema = Schema.standardSchemaV1(Schema.Struct({
  id: Schema.String,
  title: Schema.String,
  authorId: Schema.String,
}))

export const PostAuthorRelationSchema = Schema.standardSchemaV1(Schema.Struct({
  authorId: Schema.String,
}))

export const UserSchema = Schema.standardSchemaV1(Schema.Struct({
  id: Schema.String,
  name: Schema.String,
}))

// User.posts: relation has no local foreign-key columns; skipping relation schema.
export type ModelName =
  | "Post"
  | "User"

export const ALL_MODEL_NAMES = ["Post","User"] as const
"
`;

exports[`snapshot: full module output > renders without ModelName / ALL_MODEL_NAMES 1`] = `
"// AUTO-GENERATED by prisma-effect-schema-generator -- do not edit.
// Regenerate via \`prisma generate\`.

import { Schema } from "effect"

export const XSchema = Schema.Struct({
  y: Schema.String,
})
"
`;
